bug: 44476 - Debug Info link is in wrong font
http://bugzilla.zimbra.com/show_bug.cgi?id=44476

--- a/ZimbraOffline/WebRoot/skins/_base/base2/desktop.css
+++ b/ZimbraOffline/WebRoot/skins/_base/base2/desktop.css
@@ -231,6 +231,10 @@ INPUT[disabled='disabled'] {
 	background-color: #ffd5d4;
 }
 
+.ZAccountError a {
+	font-size: 11px;
+}
+
 .ZAccountErrorMessage {
 	color: #444444;
 	font-size: 11px;
